<resources>
    <string name="app_name">S XM Code Challenge</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address.</string>
    <string name="please_enter_a_valid_password">Please enter a valid password.</string>
</resources>
