<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="login"
            type="com.dheeraj.sxmcodechallenge.viewmodel.UserViewModel"/>
        <variable
            name="loginClick"
            type="com.dheeraj.sxmcodechallenge.listeners.LoginClick"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_student" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={login.email}"
                android:hint="@{login.emailHint}"
                android:maxLength="30" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/please_enter_a_valid_email_address"
            android:textColor="@color/red"
            android:layout_marginLeft="24dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={login.password}"
                android:hint="@{login.passwordHint}"
                android:inputType="textPassword"
                android:maxLength="20" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/please_enter_a_valid_password"
            android:textColor="@color/red"
            android:layout_marginLeft="24dp"/>


        <RadioButton
            android:id="@+id/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/remember_me" />

        <TextView
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:onClick="@{v->loginClick.onLoginClick()}"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            android:background="@color/green"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="14dp"
                android:fontFamily="monospace"
                android:textColor="#383838"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</layout>